<resources>
    <string name="app_name">Meu Freela</string>
    <string name="PasswordLabelTextField">Senha</string>
    <string name="EmailLabelTextField">Email</string>
    <string name="LoginLabelButton">Entrar</string>
    <string name="headLineLoginPage">Acessar conta</string>
    <string name="logoName">Meu Freela</string>
    <string name="forgotPasswordTextButton">Esqueci a senha</string>
    <string name="CreateAccountTextButton">Criar conta</string>
    <string name="headLineCreateAccountPage">Informações de registro</string>
    <string name="EmailConfirmationLabelTextField">Confirmação de email</string>
    <string name="PasswordConfirmationLabelTextField">Confirmação de senha</string>
    <string name="CreateAccountLabelButton">Criar conta</string>
    <string name="cancelButton">Cancelar</string>
    <string name="EmailErrorTextField">Insiria um endereço email</string>
    <string name="InvalidEmailErrorTextField">Insira um endereço de email válido</string>
    <string name="EmailConfirmationErrorTextField">Insira a confirmação de email</string>
    <string name="DifferentEmailErrorTextField">Deve ser igual ao email</string>
    <string name="PasswordErrorTextField">Insira uma senha</string>
    <string name="PasswordConfirmationErrorTextField">Insira a confirmação de senha</string>
    <string name="DifferentPasswordErrorTextField">Deve ser igual a senha</string>
    <string name="PasswordLengthErrorTextField">No mínimo 8 dígitos</string>
    <string name="ButtonLogout">Sair</string>
    <string name="page_1">Início</string>
    <string name="page_2">Freelancers</string>
    <string name="page_3">Trabalhos</string>
    <string name="profile_icon_label">Perfil</string>
    <string name="page_title_profile">Perfil</string>
    <string name="fab_label_new_job">Novo trabalho</string>
    <string name="fab_label_new_freelancer">Novo freelancer</string>
    <string name="label_fab_add">Adicionar</string>
    <string name="label_name_freelancer_edit_text">Nome</string>
    <string name="headline_info_new_freelancer">Dados do freelancer</string>
    <string name="label_phone_new_freelancer">Telefone</string>
    <string name="frrelancer_label_new_funcao">Função</string>
    <string name="label_button_register_new_freelancer">Salvar</string>
    <string name="title_home">home</string>
    <string name="title_freelancers">Freelancers</string>
    <string name="title_jobs">Trabalhos</string>
    <string name="content_desc_card_freelancer">Icone de freelancer</string>
    <string name="label_content_desc_Edit_free">Editar informações do freelancer</string>
    <string name="label_desc_delete_button">Excluir freelancer</string>
    <string name="pop_up_tittle_delete_confirmation">Confirmação de exclusão</string>
    <string name="pop_up_desc_delete_freela">Deseja excluir este freelancer?</string>
    <string name="pop_up_button_confirm">Confirmar</string>
    <string name="pop_up_button_cancel">Cancelar</string>
    <string name="headline_edit_freelancer">Editar Freelancer</string>
    <string name="headline_new_freelancer">Novo Freelancer</string>
    <string name="toast_label_login_ok">Autenticação realizada com sucesso.</string>
    <string name="label_wrong_login">Email ou senha incorretos.</string>
    <string name="empty_list_freelancers">Nenhum freelancer cadastrado</string>
    <string name="label_date_new_job">Escolha uma data</string>
    <string name="label_time_new_job">Escolha um horario</string>
    <string name="select_freelancers_label">Escolha os freelancers</string>
    <string name="headline_new_job">Novo trabalho</string>
    <string name="label_select_freelancers">Escolha os freelancers</string>
    <string name="phone_label">Telefone:</string>
    <string name="empty_jobs_label">Nenhum trabalho cadastrado</string>
</resources>