<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".NewFreelancer">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16sp"
        android:layout_marginVertical="32sp"
        app:cardCornerRadius="16dp"
        app:cardElevation="24dp">

        <ProgressBar
            android:id="@+id/newFreelancerProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/backNewFreelancerButton"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/md_theme_light_surface"
            android:orientation="vertical"
            android:padding="16sp">

            <TextView
                android:id="@+id/headline_info_new_freelancer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24sp"
                android:text="@string/headline_info_new_freelancer"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/freelancer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/label_name_freelancer_edit_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/freelancer_name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/freelancer_funcao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/frrelancer_label_new_funcao">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/freelancer_funcao_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/freelancer_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/label_phone_new_freelancer">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/freelancer_phone_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>



            <Button
                android:id="@+id/registerNewFreelancerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/label_button_register_new_freelancer" />

            <Button
                android:id="@+id/backNewFreelancerButton"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancelButton"
                android:textColor="@color/design_default_color_error" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</ScrollView>
