<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".NewJob">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16sp"
        android:layout_marginVertical="32sp"
        app:cardCornerRadius="16dp"
        app:cardElevation="24dp">

        <ProgressBar
            android:id="@+id/newJobProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/backNewJobButton"
            android:layout_centerHorizontal="true"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/md_theme_light_surface"
            android:orientation="vertical"
            android:padding="16sp">

            <TextView
                android:id="@+id/headline_info_new_job"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24sp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/job_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/label_date_new_job">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/job_date_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/job_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/label_time_new_job">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/job_time_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="time" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_marginVertical="8sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_select_freelancers"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                android:gravity="center"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/freelancer_new_job_RecyclerView"
                android:layout_width="match_parent"
                android:layout_height="224sp"

                android:nestedScrollingEnabled="true"
                />

            <Button
                android:id="@+id/registerNewJobButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:text="@string/label_button_register_new_freelancer" />

            <Button
                android:id="@+id/backNewJobButton"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancelButton"
                android:textColor="@color/design_default_color_error" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</ScrollView>

