<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardFreelancer"
    style="@style/Widget.Material3.CardView.Elevated"
    android:layout_width="match_parent"
    android:layout_height="96dp"
    android:layout_marginBottom="14dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">

        <ImageView
            android:id="@+id/recImage"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginVertical="18dp"
            android:layout_marginHorizontal="14dp"
            android:contentDescription="@string/content_desc_card_freelancer"
            android:scaleType="centerCrop"
            android:src="@drawable/account_circle_icon" />

        <LinearLayout
            android:id="@+id/infoLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/recImage"
            android:orientation="vertical"
            android:gravity="center_vertical"
            tools:ignore="RelativeOverlap">

            <TextView
                android:id="@+id/nameFreelancerCardTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="?attr/textAppearanceTitleMedium" />

            <TextView
                android:id="@+id/funcFreelancerCardTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_marginVertical="2dp"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:id="@+id/phoneFreelancerCardTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?android:attr/textColorSecondary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            >

            <ImageButton
                android:id="@+id/buttonEditFreelancerCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/label_content_desc_Edit_free"
                android:src="@drawable/edit_icon"
                />

            <ImageButton
                android:id="@+id/buttonDeleteFreelancerCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/label_desc_delete_button"
                android:src="@drawable/delete_icon"
                android:layout_marginHorizontal="16dp"/>

        </LinearLayout>

    </RelativeLayout>


</com.google.android.material.card.MaterialCardView>
